# Rust-Game-2020

./: .gitignore  Cargo.toml  README.md  architecture.md
.github/workflows/: rust.yml
assets/textures/: spritesheet.ron
assets/ui/: game_over.ron  hud.ron  menu.ron
config/: bindings.ron  display.ron
docs/: install.md
src/: bullet.rs  button.rs  camera.rs  demo2.rs  enemy.rs  game.rs  game_over.rs  main.rs  menu.rs  physics.rs  piston_game.rs  player.rs  text.rs  texture_manager.rs  tile.rs  vectors.rs  world.rs
src/components/: damageable.rs  enemy.rs  health.rs  lifetime.rs  mod.rs  physics.rs  player.rs
src/event_manager/: mod.rs
src/resources/: audio.rs  camera_info.rs  game_info.rs  mod.rs  sprite_sheet.rs
src/systems/: ai.rs  ai_combat.rs  camera_follow.rs  destroy.rs  game_over.rs  health.rs  lifetime.rs  mod.rs  movement.rs  physics.rs  player_combat.rs  wave.rs
src/vectors/: mod.rs  vector2.rs
