[package]
name = "djog_rust"
version = "0.1.0"
authors = ["Rijk van Putten <rijkvanputten@hotmail.nl>"]
edition = "2018"

[[bin]]
name = "hello_world"
path = "src/main.rs"

[[bin]]
name = "piston_test"
path = "src/piston_test.rs"

[[bin]]
name = "piston_game"
path = "src/piston_game.rs"

[dependencies]
piston_window = "0.105.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.31.0"
piston2d-sprite = "0.58.0"
image = "0.22.1"
piston2d-drag_controller = "0.29.0"
piston2d-deform_grid = "0.5.0"
gfx = "0.18.1"
gfx_device_gl = "0.16.2"
vecmath = "1.0.0"
camera_controllers = "0.31.0"
rand = "0.6.0"
shader_version = "0.6.0"
piston = "0.49.0"
piston2d-graphics = "0.35.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.69.0"