[package]
name = "rust_project_2020"
version = "0.0.1"
authors = ["Rijk van Putten"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.33"

[[bin]]
name = "hello_world"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"